--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13385,6 +13385,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   }
 }
 
+.document-type-navs.main-navs {
+  border-bottom: 1px solid #E7E9EC;
+}
+
 #media-stream.document-parent .document-data-table-head .data-head-name {
   -ms-flex-preferred-size: calc(40% - 50px);
   flex-basis: calc(40% - 50px);
@@ -13510,11 +13514,22 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   border: 0;
 }
 
+.bp-document-listing .media-search-form .bp-dir-search-form .nouveau-search-submit {
+  width: auto;
+  padding: 4px;
+  height: auto;
+  z-index: 112;
+}
+
 .bp-document-listing .media-search-form .bp-dir-search-form #group-document-search {
   background-image: none;
   padding: 6px 2rem 6px 10px;
   height: auto;
   font-size: 14px;
+}
+
+.bp-document-listing .bp-media-header-wrap .bb-title {
+  width: auto;
 }
 
 @media screen and (max-width: 1120px) {
