--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2062,7 +2062,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 }
 
 .document-type-navs.main-navs {
-	border-bottom: 1px solid #e7e9eC;
+	border-bottom: 1px solid #e7e9ec;
 }
 
 #media-stream.document-parent {
@@ -2958,10 +2958,23 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 		@media screen and (max-width: 1024px) {
 			position: static;
-			margin: -20px 0 0 0;
+			margin: 0;
 
 			> * {
 				margin-bottom: 15px;
+				width: 100% !important;
+			}
+
+			.subnav-filters .subnav-search {
+				width: 100%;
+
+				.bp-search {
+					width: 100%;
+
+					.bp-dir-search-form {
+						width: 100%;
+					}
+				}
 			}
 
 		}
