--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13386,7 +13386,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 .document-type-navs.main-navs {
-  border-bottom: 1px solid #E7E9EC;
+  border-bottom: 1px solid #e7e9eC;
 }
 
 #media-stream.document-parent .document-data-table-head .data-head-name {
@@ -14182,10 +14182,20 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 @media screen and (max-width: 1024px) {
   .directory.document .document-options {
     position: static;
-    margin: -20px 0 0 0;
+    margin: 0;
   }
   .directory.document .document-options > * {
     margin-bottom: 15px;
+    width: 100% !important;
+  }
+  .directory.document .document-options .subnav-filters .subnav-search {
+    width: 100%;
+  }
+  .directory.document .document-options .subnav-filters .subnav-search .bp-search {
+    width: 100%;
+  }
+  .directory.document .document-options .subnav-filters .subnav-search .bp-search .bp-dir-search-form {
+    width: 100%;
   }
 }
 
