--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2279,23 +2279,29 @@ input.search-query-input {
   color: #122b46;
 }
 
-.ac-reply-toolbar .toolbar-button.disable,
-.ac-reply-toolbar .toolbar-button.disable.active,
-#whats-new-toolbar .toolbar-button.disable,
-#whats-new-toolbar .toolbar-button.disable.active,
-#whats-new-messages-toolbar .toolbar-button.disable,
-#whats-new-messages-toolbar .toolbar-button.disable.active {
+.ac-reply-toolbar .post-elements-buttons-item.disable,
+.ac-reply-toolbar .post-elements-buttons-item.disable.active,
+#whats-new-toolbar .post-elements-buttons-item.disable,
+#whats-new-toolbar .post-elements-buttons-item.disable.active,
+#whats-new-messages-toolbar .post-elements-buttons-item.disable,
+#whats-new-messages-toolbar .post-elements-buttons-item.disable.active {
   pointer-events: none;
   opacity: 0.4;
 }
 
-.ac-reply-toolbar .toolbar-button.disable .bb-icon,
-.ac-reply-toolbar .toolbar-button.disable.active .bb-icon,
-#whats-new-toolbar .toolbar-button.disable .bb-icon,
-#whats-new-toolbar .toolbar-button.disable.active .bb-icon,
-#whats-new-messages-toolbar .toolbar-button.disable .bb-icon,
-#whats-new-messages-toolbar .toolbar-button.disable.active .bb-icon {
+.ac-reply-toolbar .post-elements-buttons-item.disable .bb-icon,
+.ac-reply-toolbar .post-elements-buttons-item.disable.active .bb-icon,
+#whats-new-toolbar .post-elements-buttons-item.disable .bb-icon,
+#whats-new-toolbar .post-elements-buttons-item.disable.active .bb-icon,
+#whats-new-messages-toolbar .post-elements-buttons-item.disable .bb-icon,
+#whats-new-messages-toolbar .post-elements-buttons-item.disable.active .bb-icon {
   color: rgba(18, 43, 70, 0.4);
+}
+
+.ac-reply-toolbar .post-elements-buttons-item.no-click,
+#whats-new-toolbar .post-elements-buttons-item.no-click,
+#whats-new-messages-toolbar .post-elements-buttons-item.no-click {
+  pointer-events: none;
 }
 
 .bb-groups-messages-right-bottom #whats-new-toolbar .bb-icon-attach:before {
@@ -2561,6 +2567,22 @@ span.dashicons.dashicons-admin-file:before {
 
 .activity-list .activity-item .activity-content.documemt-activity .activity-inner {
   overflow: visible;
+}
+
+.activity-media-description .bp-add-media-activity-description.show-edit .add {
+  display: none;
+}
+
+.activity-media-description .bp-add-media-activity-description.show-edit .edit {
+  display: block;
+}
+
+.activity-media-description .bp-add-media-activity-description.show-add .add {
+  display: block;
+}
+
+.activity-media-description .bp-add-media-activity-description.show-add .edit {
+  display: none;
 }
 
 .bb-activity-media-wrap {
@@ -13386,7 +13408,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 .document-type-navs.main-navs {
-  border-bottom: 1px solid #e7e9eC;
+  border-bottom: 1px solid #e7e9ec;
 }
 
 #media-stream.document-parent .document-data-table-head .data-head-name {
