--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -13408,7 +13408,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 .document-type-navs.main-navs {
-  border-bottom: 1px solid #e7e9eC;
+  border-bottom: 1px solid #e7e9ec;
 }
 
 #media-stream.document-parent .document-data-table-head .data-head-name {
