#266 - Move folder popup folder can't be moved to same folder

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2826,6 +2826,12 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 				margin: 0;
 				padding: 0;
 
+				&.is-disabled {
+					cursor: auto;
+					opacity: 0.5;
+					pointer-events: none;
+				}
+
 				span {
 					padding: 8px 15px;
 					border-bottom: 1px solid #e7e9ec;
