--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -14085,6 +14085,13 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   padding: 0;
 }
 
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li.is-disabled,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li.is-disabled {
+  cursor: auto;
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li span,
 .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span {
   padding: 8px 15px;
