text and formatting for document extension warnings

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -384,6 +384,14 @@ tr.bp-search-parent-field label {
 	font-weight: 600;
 }
 
+.bp-admin-card p.alert {
+	padding: 10px 12px;
+	background: #f3f5f6;
+	border-radius: 3px;
+	border: 1px solid #ccd0d4;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+}
+
 
 /* Settings */
 .bp-admin-card.section-bp_main h2:before {
