Extensions Table CSS

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -604,14 +604,15 @@ table.extension-listing tbody td #btn-remove-extensions {
   cursor: pointer;
 }
 
-table.extension-listing tbody td #btn-add-extensions {
-  cursor: pointer;
-  float: right;
-  margin-right: 2px;
-}
-
 table.extension-listing tbody td input[type="text"] {
   width: 100%;
+}
+
+table.extension-listing tfoot td #btn-add-extensions,
+table.extension-listing tfoot td #btn-check-mime-type {
+  cursor: pointer;
+  float: right;
+  margin-right: 5px;
 }
 
 .section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing th {
