--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -567,7 +567,15 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 /*
  * 2.7 Document Extensions
  */
-tr.document-extensions-listing > td {
+.section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing th {
+  display: none;
+}
+
+.section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing td table.extension-listing thead tr th {
+  display: table-cell;
+}
+
+.section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing > td {
   padding: 0;
 }
 
@@ -577,7 +585,7 @@ table.extension-listing {
 }
 
 table.extension-listing thead th {
-  padding: 8px 10px;
+  padding: 12px 10px;
 }
 
 table.extension-listing thead th.ext-head-enable {
@@ -593,7 +601,7 @@ table.extension-listing thead th.ext-head-extension {
 }
 
 table.extension-listing tbody td {
-  padding: 8px 10px;
+  padding: 10px;
 }
 
 table.extension-listing tbody td input.error {
@@ -613,14 +621,6 @@ table.extension-listing tfoot td #btn-check-mime-type {
   cursor: pointer;
   float: left;
   margin-left: 5px;
-}
-
-.section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing th {
-  display: none;
-}
-
-.section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing td table.extension-listing thead tr th {
-  display: table-cell;
 }
 
 /*
