#266 - fix for media, document and gif used one at a time for group messages

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -583,6 +583,7 @@
 .active#forums-document-button,
 .active#bp-group-messages-media-button,
 .active#bp-group-messages-document-button,
+.active#bp-group-messages-gif-button,
 .active#forums-gif-button,
 .active#messages-gif-button {
 
