--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -13733,7 +13733,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list {
   position: absolute;
   top: 33px;
-  left: -4px;
+  left: -20px;
   background: #fff;
   box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
   border-radius: 4px;
@@ -13750,9 +13750,9 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   height: 0;
   top: 0;
   margin: 0 auto;
-  left: 10px;
+  left: 27px;
   box-sizing: border-box;
-  border: 8px solid #000;
+  border: 6px solid #000;
   border-color: #fff transparent transparent #fff;
   -webkit-transform-origin: 100% 0;
   -ms-transform-origin: 100% 0;
@@ -13768,7 +13768,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list ul {
   list-style: none;
-  margin: 10px 0;
+  margin: 5px 0;
   padding: 0;
 }
 
@@ -13800,17 +13800,24 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list ul li a {
-  padding: 5px 10px;
+  padding: 10px 14px;
   display: block;
-  font-size: 13px;
+  font-size: 14px;
+  line-height: 1;
+  color: #7f868f;
 }
 
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list ul li a:hover {
   background-color: #f5f5f5;
+  color: #5087e5;
 }
 
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items .media-folder_action__list ul li a i {
+  display: inline-block;
   margin-left: 10px;
+  width: 20px;
+  font-size: 15px;
+  text-align: center !important;
 }
 
 #bp-media-single-folder .bp-media-header-wrap .media-folder_items.is-visible .media-folder_action__list {
