#266 - Don't allow file or folder to move into same folder

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2659,6 +2659,11 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			}
 
 		}
+
+		&.is-disabled {
+			pointer-events: none;
+			opacity: 0.5;
+		}
 	}
 }
 
