Extensions Table CSS

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -478,7 +478,7 @@ tr.bp-search-parent-field label {
 }
 
 .bp-admin-card.section-bp_document_settings_extensions h2:before {
-  background-image: url(../../images/admin/icons/fontawesome/solid/clone.svg);
+  display: none;
 }
 
 .bp-admin-card.section-bp_media_settings_emoji h2:before {
@@ -581,23 +581,23 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 
 table.extension-listing {
   border-radius: 4px;
-  margin-bottom: 12px;
+  margin: 9px 0 12px;
 }
 
 table.extension-listing thead th {
   padding: 12px 10px;
 }
 
-table.extension-listing thead th.ext-head-enable {
-  width: 1px;
-}
-
-table.extension-listing thead th.ext-head-control {
-  width: 30px;
-}
-
 table.extension-listing thead th.ext-head-extension {
-  width: 100px;
+  width: 5%;
+}
+
+table.extension-listing thead th.ext-head-desc {
+  width: 12%;
+}
+
+table.extension-listing thead td.ext-head-enable {
+  width: 1.2em;
 }
 
 table.extension-listing tbody td {
@@ -611,18 +611,24 @@ table.extension-listing tbody td input.error {
 table.extension-listing tbody td input.hide-border {
   border: none;
   background: transparent;
+  margin: 0;
+  padding: 0;
+}
+
+table.extension-listing tbody td input[type="text"] {
+  width: 100%;
+}
+
+table.extension-listing tbody td input.extension-mime[type="text"] {
+  width: 92%;
 }
 
 table.extension-listing tbody td #btn-remove-extensions {
   cursor: pointer;
   color: #a00;
-  text-decoration: none;
-  border-bottom: 1px solid #a00;
-  font-size: 13px;
-}
-
-table.extension-listing tbody td input[type="text"] {
-  width: 100%;
+  font-size: 18px;
+  vertical-align: middle;
+  margin-right: 6px;
 }
 
 table.extension-listing tfoot td #btn-add-extensions,
