--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2542,11 +2542,12 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 								color: $blue;
 							}
 
-							i {
+							i:before {
+								font-family: 'bb-icons';/* stylelint-disable-line */
+								font-size: 16px;
 								display: inline-block;
 								margin-right: 10px;
 								width: 20px;
-								font-size: 15px;
 								text-align: center !important;
 							}
 						}
