#266 - Fixed : Column breaking with long document name

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1781,8 +1781,6 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	}
 
 	.media-folder_icon {
-		-ms-flex-preferred-size: 52px;
-		flex-basis: 52px;
 		width: 52px;
 		padding-left: 10px;
 
@@ -1799,16 +1797,13 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 	.media-folder_visibility,
 	.media-folder_modified {
-		-ms-flex-preferred-size: 20%;
-		flex-basis: 20%;
+		width: 20%;
 	}
 
 	.media-folder_details {
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
-		-ms-flex-preferred-size: calc(+60% - 100px);
-		flex-basis: calc(60% - 100px);
 		width: calc(60% - 100px);
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
@@ -1903,8 +1898,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		-webkit-box-pack: center;
 		-ms-flex-pack: center;
 		justify-content: center;
-		-ms-flex-preferred-size: 55px;
-		flex-basis: 55px;
+		width: 55px;
 		position: relative;
 
 		.media-folder_action__anchor {
@@ -2109,14 +2103,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		.media-folder_items {
 
 			.media-folder_details {
-				-ms-flex-preferred-size: calc(40% - 100px);
-				flex-basis: calc(40% - 100px);
 				width: calc(40% - 100px);
 			}
 
 			.media-folder_group {
-				-ms-flex-preferred-size: 20%;
-				flex-basis: 20%;
 				width: 20%;
 			}
 
